✨ feat: 유레카 게이트웨이 및 AUTH 기능 개선
- 게이트 웨이 유레카 연동 필요
- 상태관리 api 추가